--- a/example.html
+++ b/example.html
@@ -281,6 +281,7 @@
   </div>
   <button id="toggleSidebarBtn" class="desktop-only">‹</button>
   <button id="mobileMenuBtn">☰</button>
+  <h3>Текст под меню</h3>
 
   <div class="content markdown-body" id="content">
 <h2 id="intro">Добро пожаловать</h2>
