--- a/example.html
+++ b/example.html
@@ -278,10 +278,18 @@
   <div class="sidebar" id="sidebar">
     <h2>Содержание</h2>
     <ul id="sidebarList"></ul>
-  </div>
+  <p>
+    <a href="https://t.me/error_kill_bio" target="_blank" style="font-size: 12px;">
+      Текст с ссылкой (например на канал FENST4R)
+    </a>
+  </p>
+  <p style="font-size:12px;">
+    Простой текст под содержанием
+  </p>
+</div>
+
   <button id="toggleSidebarBtn" class="desktop-only">‹</button>
   <button id="mobileMenuBtn">☰</button>
-  <h3>Текст под меню</h3>
 
   <div class="content markdown-body" id="content">
 <h2 id="intro">Добро пожаловать</h2>
