--- a/example.html
+++ b/example.html
@@ -279,8 +279,8 @@
     <h2>Содержание</h2>
     <ul id="sidebarList"></ul>
   <p>
-    <a href="https://t.me/error_kill_bio" target="_blank" style="font-size: 12px;">
-      Текст с ссылкой (например на канал FENST4R)
+    <a href="https://fenst4r.life/docs" target="_blank" style="font-size: 12px;">
+      Текст с ссылкой
     </a>
   </p>
   <p style="font-size:12px;">
