--- a/example.html
+++ b/example.html
@@ -310,7 +310,7 @@
     </p>
   </div>
 
-  <button id="toggleSidebarBtn" class="desktop-only">‹</button>
+  <button id="toggleSidebarBtn" class="desktop-only">‹</button>0
   <button id="mobileMenuBtn">☰</button>
 
   <div class="content markdown-body" id="content">
@@ -340,7 +340,39 @@
 
 <h2 id="examples">Примеры</h2>
 <p>
-  Стандартная аватарка: {{image:https://fenst4r.life/f1f3ccefb7b6c4ca82f1ce5d5a184fea.jpg}}<br>
+  Стандартная аватарка: {{image:https://fenst4r.life/f1f3ccefb7b6c4ca82f1ce5d5a184fea.jpg}} а это текст после неё, ну тип "У лукоморья дуб зелёный;
+Златая цепь на дубе том:
+И днём и ночью кот учёный
+Всё ходит по цепи кругом;
+Идёт направо — песнь заводит,
+Налево — сказку говорит.
+Там чудеса: там леший бродит,
+Русалка на ветвях сидит;
+Там на неведомых дорожках
+Следы невиданных зверей;
+Избушка там на курьих ножках
+Стоит без окон, без дверей;
+Там лес и дол видений полны;
+Там о заре прихлынут волны
+На брег песчаный и пустой,
+И тридцать витязей прекрасных
+Чредой из вод выходят ясных,
+И с ними дядька их морской;
+Там королевич мимоходом
+Пленяет грозного царя;
+Там в облаках перед народом
+Через леса, через моря
+Колдун несёт богатыря;
+В темнице там царевна тужит,
+А бурый волк ей верно служит;
+Там ступа с Бабою Ягой
+Идёт, бредёт сама собой,
+Там царь Кащей над златом чахнет;
+Там русский дух… там Русью пахнет!
+И там я был, и мёд я пил;
+У моря видел дуб зелёный;
+Под ним сидел, и кот учёный
+Свои мне сказки говорил."<br>
   Уменьшенная до 150px: {{image:https://fenst4r.life/f1f3ccefb7b6c4ca82f1ce5d5a184fea.jpg|width=150}}<br>
   Видео в полном размере: {{video:https://fenst4r.life/mister-dep/video.mp4}}<br>
   Видео шириной 300px: {{video:https://fenst4r.life/mister-dep/video.mp4|width=300}}<br>
